--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,23 @@
 {
   "configurations": [
     {
-      "name": "Python 调试程序: 模块",
+      "name": "attn_map_main",
       "type": "debugpy",
       "request": "launch",
-      "module": "enter-your-module-name"
-    }
+      "module": "project.main",
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "justMyCode": true,
+      "args": [
+        "model.backbone=3dcnn",
+        "model.model_class_num=3",
+        "train.fast_dev_run=false",
+        "train.gpu_num=0",
+        "train.clip_duration=1",
+        "train.uniform_temporal_subsample_num=8",
+        "data.num_workers=0",
+        "data.gait_cycle_batch_size=1",
+      ]
+    },
   ]
 }
