--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pytorch-lightning >= 1.0.0rc2
-torch >= 1.3.0
-torchvision >= 0.6.0
+pytorch-lightning 
+torch
+torchvision
 
 # yolo api
 ultralytics
@@ -11,4 +11,12 @@ hydra-core
 # for cross validation
 scikit-learn
 
-pytorchvideo
+imblearn
+
+grad-cam
+
+captum
+
+tensorboard
+
+rich
