--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -28,7 +28,7 @@ data:
   default_batch_size: 16  # this used for default method, without gait cycle defined method.
 
 model:
-  backbone: 3dcnn # choices=[3dcnn, 2dcnn, cnn_lstm, two_stream, 3dcnn_atn], help='the backbone of the model'
+  backbone: 3dcnnatn # choices=[3dcnn, 2dcnn, cnn_lstm, two_stream, 3dcnn_atn], help='the backbone of the model'
   model_class_num: 3 # the class num of model. 2 > [ASD, non_ASD]. 3 > [ASD, DHS, LCS_HipOA]. 4 > [ASD, DHS, LCS_HipOA, normal]
   model_depth: 50 # choices=[50, 101, 152], help='the depth of used model'
 
@@ -45,7 +45,7 @@ train:
 
   experiment: ${model.backbone}_attn_map_${train.attn_map} # the experiment name
 
-  gpu_num: 0 # choices=[0, 1], help='the gpu number whicht to train'
+  gpu: 0 # choices=[0, 1], help='the gpu number whicht to train'
 
   log_path: logs/${train.experiment}/${now:%Y-%m-%d}/${now:%H-%M-%S}
 
