--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -18,7 +18,7 @@ data:
   skeleton_path: ${data.root_path}/seg_skeleton_pkl # skeleton path, this used for cross validation, with different class number.
   doctor_results_path: ${data.root_path}/doctor_result # doctor results path, this used for cross validation, with different class number.
 
-  index_mapping: ${data.root_path}/index_mapping # training mapping path, this used for cross validation, with different class number.
+  index_mapping: ${data.root_path}/index_mapping_old # training mapping path, this used for cross validation, with different class number.
 
   num_workers: 0
   img_size: 224
