fix the test_step err for save the predict results.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
   "configurations": [
     {
-      "name": "attn_map_main",
+      "name": "3dcnn",
       "type": "debugpy",
       "request": "launch",
       "module": "project.main",
@@ -11,7 +11,24 @@
       "args": [
         "model.backbone=3dcnn",
         "model.model_class_num=3",
-        "train.fast_dev_run=false",
+        "train.gpu=1",
+        "train.clip_duration=1",
+        "train.uniform_temporal_subsample_num=8",
+        "data.num_workers=0",
+        "model.fuse_method=add"
+      ]
+    },
+    {
+      "name": "3dcnn_atn",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "project.main",
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "justMyCode": true,
+      "args": [
+        "model.backbone=3dcnnatn",
+        "model.model_class_num=3",
         "train.gpu=1",
         "train.clip_duration=1",
         "train.uniform_temporal_subsample_num=8",
