更新模型配置，修改融合方法为se_atn，添加SEFusionRes3DCNN类并移除CrossAttentionRes3DCNN类，调整相关文件导入路径。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
         "train.clip_duration=1",
         "train.uniform_temporal_subsample_num=8",
         "data.num_workers=0",
-        "model.fuse_method=avg"
+        "model.fuse_method=se_atn"
       ]
     },
     {
