--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -31,11 +31,11 @@ data:
   batch_size: 1 # this used for default method, without gait cycle defined method.
 
 model:
-  backbone: 3dcnn # choices=[3dcnn, 2dcnn, cnn_lstm, two_stream, 3dcnn_atn], help='the backbone of the model'
+  backbone: 3dcnn # choices=[3dcnn], help='the backbone of the model'
   model_class_num: 3 # the class num of model. 2 > [ASD, non_ASD]. 3 > [ASD, DHS, LCS_HipOA]. 4 > [ASD, DHS, LCS_HipOA, normal]
   model_depth: 50 # choices=[50, 101, 152], help='the depth of used model'
 
-  fuse_method: add # add, mul, concat, none, late, avg, cross_atn, se_atn
+  fuse_method: add # add, mul, concat, none, late, avg
 
 train:
   # Training config
